# FastApiTemplate

./: .gitignore  .pre-commit-config.yaml  example.env  main.py  pyproject.toml
src/: __init__.py  bootstrap.py  logger.py  main.py  settings.py  utils.py
src/transport/rest/: __init__.py  constants.py  error_handlers.py  errors.py  router.py
src/transport/rest/handlers/debug/: handlers.py
src/transport/rest/middlewares/: errors_handler_middleware.py  logging_middleware.py  trace_id_middleware.py
tests/: conftest.py
